# santa

./: .bazelrc  .clang-format  .gitignore  .lefthook.yml  .mise.toml  .pre-push.hook  .pyink-config  .pylintrc  .swift-format  0001-cc_rules.cxx.rs.patch  AGENTS.md  BUILD  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  Makefile  README.md  SECURITY.md  cog.toml  helper.bzl  lefthook.yml  non_module_deps.bzl  package-lock.json  rust-toolchain.toml  tmp-rules.json
.github/: dependabot.yml  labeler-pr.yml
.github/ISSUE_TEMPLATE/: 01-feature-request.yml  02-bug-report.yml  02-question.yml  03-bug-report.yml  03-faa-cel-use-case.yml  04-faa-cel-use-case.yml  config.yml
.github/workflows/: check-markdown.yml  ci.yml  cla.yml  codeql.yml  continuous.yml  docs-ci.yml  docs-deploy.yml  e2e.yml  fuzz.yml  labeler.yml  mirror.yml  sanitizers.yml
Conf/: com.northpolesec.santa.bundleservice.plist  com.northpolesec.santa.metricservice.plist  com.northpolesec.santa.migration.plist  com.northpolesec.santa.plist  com.northpolesec.santa.syncservice.plist  com.northpolesec.santad.plist  finish_install.sh  install.sh  install_services.sh  uninstall.sh
Conf/MigrationPackage/: Distribution.xml  migration.sh  package.sh  postinstall  preinstall
Conf/Package/: migration.sh  notarization_tool.sh  package.sh  package_and_sign.sh  postinstall  preinstall
Fuzzing/common/: MachOParse.mm
Source/common/: AccountLookup.h  AccountLookup.mm  AccountLookupTest.mm  AuditUtilities.h  AuditUtilities.mm  AuditUtilitiesTest.mm  BUILD  BranchPrediction.h  CEL.cc  CEL.h  CEL.proto  CELTest.mm  CSOpsHelper.h  CSOpsHelper.mm  CSOpsHelperTest.mm  CertificateHelpers.h  CertificateHelpers.m  CertificateHelpers.mm  CodeSigningIdentifierUtils.h  CodeSigningIdentifierUtils.mm  CodeSigningIdentifierUtilsTest.mm  CoderMacros.h  Defer.h  DeferTest.mm  EncodeEntitlements.h  EncodeEntitlements.mm  EncodeEntitlementsTest.mm  Glob.h  Glob.mm  Keychain.h  Keychain.mm  KeychainTest.mm  MOLAuthenticatingURLSession.h  MOLAuthenticatingURLSession.m  MOLAuthenticatingURLSession.mm  MOLAuthenticatingURLSessionTest.mm  MOLCertificate.h  MOLCertificate.m  MOLCertificate.mm  MOLCertificateTest.m  (+226 more)
Source/gui/: BUILD  Info.plist  MoonLandingIcon.swift  SNTAboutWindowController.h  SNTAboutWindowController.m  SNTAboutWindowController.mm  SNTAboutWindowView.swift  SNTAppDelegate.h  SNTAppDelegate.m  SNTAppDelegate.mm  SNTAuthorizationHelper.h  SNTAuthorizationHelper.mm  SNTBinaryMessageWindowController.h  SNTBinaryMessageWindowController.m  SNTBinaryMessageWindowController.mm  SNTBinaryMessageWindowView.swift  SNTDeviceMessageWindowController.h  SNTDeviceMessageWindowController.m  SNTDeviceMessageWindowController.mm  SNTDeviceMessageWindowView.swift  SNTFido2Helper.h  SNTFido2Helper.mm  SNTFido2PromptView.swift  SNTFileAccessMessageWindowController.h  SNTFileAccessMessageWindowController.m  SNTFileAccessMessageWindowController.mm  SNTFileAccessMessageWindowView.swift  SNTFileInfoView.swift  SNTMessageView.swift  SNTMessageWindowController.h  SNTMessageWindowController.m  SNTMessageWindowController.mm  SNTNetworkFlowMessageWindowController.h  SNTNetworkFlowMessageWindowController.mm  SNTNetworkFlowMessageWindowView.swift  SNTNetworkMountMessageWindowController.h  SNTNetworkMountMessageWindowController.mm  SNTNetworkMountMessageWindowView.swift  SNTNotificationManager.h  SNTNotificationManager.m  (+11 more)
Source/santabundleservice/: BUILD  Info.plist  SNTBundleService.h  SNTBundleService.m  SNTBundleService.mm  main.m  main.mm
Source/santactl/: BUILD  Info.plist  SNTCommand.h  SNTCommand.mm  SNTCommandController.h  SNTCommandController.m  SNTCommandController.mm  SNTCommandTest.mm  bundleinfo.swift  doctor.swift  eventupload.swift  fileinfo.swift  flushcache.swift  install.swift  main.mm  metrics.swift  printlog.swift  rule.swift  rule_test.swift  santactl.swift  status.swift  sync.swift  telemetry.swift  version.swift
Source/santad/: AdminGroupMembership.h  AdminGroupMembership.mm  AdminUserState.h  AdminUserState.mm  AdminUserStateTest.mm  BUILD  CELActivation.h  CELActivation.mm  CELActivationTest.mm  CSOpsHelper.h  CSOpsHelper.mm  Cargo.toml  DaemonConfigBundle.h  DaemonConfigBundle.mm  DaemonConfigBundleTest.mm  EntitlementsFilter.h  EntitlementsFilter.mm  EntitlementsFilterTest.mm  Info.plist  KillingMachine.h  KillingMachine.mm  KillingMachineTest.mm  MachServiceDeadWaiter.h  MachServiceDeadWaiter.mm  Metrics.h  Metrics.mm  MetricsTest.mm  MockTTYWriter.h  ProcessControl.h  ProcessControl.mm  SNTApplicationCoreMetrics.h  SNTApplicationCoreMetrics.mm  SNTApplicationCoreMetricsTest.mm  SNTBinaryUploadController.h  SNTBinaryUploadController.mm  SNTBinaryUploadControllerTest.mm  SNTCompilerController.h  SNTCompilerController.mm  SNTCompilerControllerTest.mm  SNTDaemonControlController.h  (+61 more)
Source/santametricservice/: BUILD  Info.plist  SNTMetricService.h  SNTMetricService.mm  SNTMetricServiceTest.m  SNTMetricServiceTest.mm  main.m  main.mm
Source/santasyncservice/: BUILD  Info.plist  Pinning.h  Pinning.mm  ProtoTraits.h  SNTBinaryUploader.h  SNTBinaryUploader.mm  SNTBinaryUploaderTest.mm  SNTNATSProxyConnect.h  SNTNATSProxyConnect.mm  SNTNATSProxyConnectTest.mm  SNTPolaris.h  SNTPolaris.mm  SNTPostflightConfigBundle.h  SNTPostflightConfigBundle.mm  SNTPostflightConfigBundleTest.mm  (+75 more)
Testing/: NATS_TESTING.md  check_test_suites.sh  fix.sh  lint.sh  localization.py  run_nats_integration_tests.sh  run_santa_docker_nats_tests.sh  test_docker_nats.sh  test_nats_direct_connection.go  test_nats_local.sh  test_nats_with_mock_server.go  trigger_jwt_violations.sh  workspace_status.sh
conf/: com.northpolesec.santa.bundleservice.plist  com.northpolesec.santa.migration.plist  install_services.sh  uninstall.sh
docs/: CNAME  README.md  _config.yml  docusaurus.config.ts  index.md  known-limitations.md  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts
fuzzing/: BUILD  fuzzing.bzl
lefthook/: commit-msg.yml
profiles/: BUILD  MODULE.bazel
stubs/sleigh/: BUILD  MODULE.bazel  Santa_Dev.provisionprofile  main.cc
(+1040 files in other folders)
