module(name = "santa")

bazel_dep(name = "abseil-cpp", version = "20250814.1")
bazel_dep(name = "apple_support", version = "1.24.1")
bazel_dep(name = "cel-cpp", version = "0.13.0")
bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "protobuf", version = "33.0")
bazel_dep(name = "rules_apple", version = "4.2.0")
bazel_dep(name = "rules_cc", version = "0.2.11")
bazel_dep(name = "rules_fuzzing", version = "0.6.0")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "rules_swift", version = "2.9.0")
bazel_dep(name = "xxhash", version = "0.8.3")
bazel_dep(name = "zstd", version = "1.5.7")
bazel_dep(name = "boringssl", version = "0.20251002.0")

# North Pole Protos
bazel_dep(name = "protos", version = "1.0.1", repo_name = "northpolesec_protos")
git_override(
    module_name = "protos",
    commit = "e577bc8cb8fa335362460e7b04a492e97f8e3820",
    remote = "https://github.com/northpolesec/protos",
)

# FMDB
non_module_deps = use_extension("//deps:non_module_deps.bzl", "non_module_deps")
use_repo(non_module_deps, "FMDB")
use_repo(non_module_deps, "OCMock")
use_repo(non_module_deps, "nats_c")

# Hedron's Compile Commands Extractor
# Note: Moved to a fork because the original project's maintenance status is in limbo.
# The maintainer claims to still be around, but nothing is getting merged:
#   https://github.com/hedronvision/bazel-compile-commands-extractor/issues/232#issuecomment-2512931043
#   https://github.com/hedronvision/bazel-compile-commands-extractor/issues/240
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7",
    remote = "https://github.com/mikael-s-persson/bazel-compile-commands-extractor.git",
)
